[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/new/seaport_sprites.png" type="Texture" id=1]
[ext_resource path="res://assets/new/Atlas/Smoke.atlastex" type="Texture" id=2]
[ext_resource path="res://scene/build1/ship/Ship_sprites.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=10]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 96, 298, 78, 247 )

[sub_resource type="AtlasTexture" id=1]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 95, 3, 79, 248 )

[sub_resource type="AtlasTexture" id=11]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 283, 349, 64, 33 )

[sub_resource type="AtlasTexture" id=2]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 283, 55, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 299, 26, 32, 15 )

[sub_resource type="AtlasTexture" id=13]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 291, 519, 48, 24 )

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 291, 224, 48, 25 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.00416667, 0.1875 ), 0.0, 0.272727, 0, 0, Vector2( 1, 0.739773 ), 0.396694, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.105991, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0.498039 )

[sub_resource type="AtlasTexture" id=12]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 285, 296, 62, 10 )

[sub_resource type="AtlasTexture" id=5]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 285, 2, 62, 10 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Radar:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Radar"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Radar:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Ship" type="Node2D"]
script = ExtResource( 3 )

[node name="ShadowHull" type="Sprite" parent="."]
position = Vector2( -7, 7 )
texture = SubResource( 10 )

[node name="Hull" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="ShadowSuperstruche" type="Sprite" parent="."]
position = Vector2( 0, 74 )
texture = SubResource( 11 )

[node name="Superstruche" type="Sprite" parent="."]
position = Vector2( 0, 74 )
texture = SubResource( 2 )

[node name="Mast" type="Sprite" parent="."]
position = Vector2( 0, 79 )
texture = SubResource( 4 )

[node name="ShadowTube" type="Sprite" parent="."]
position = Vector2( 0, 102 )
texture = SubResource( 13 )

[node name="Tube" type="Sprite" parent="."]
position = Vector2( 0, 102 )
texture = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Tube"]
amount = 12
lifetime = 0.29
preprocess = 33.07
local_coords = false
draw_order = 1
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 3.34
gravity = Vector2( 0, 0 )
angular_velocity = -26.67
angular_velocity_random = 0.96
linear_accel_random = 1.0
radial_accel_random = 0.1
tangential_accel_random = 0.43
damping_random = 0.54
angle = -71.1
angle_random = 0.65
scale_amount_random = 1.0
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 9 )
anim_speed_random = 0.4

[node name="ShadowRadar" type="Sprite" parent="."]
position = Vector2( -1, 78 )
texture = SubResource( 12 )

[node name="Radar" type="Sprite" parent="."]
position = Vector2( -1, 78 )
texture = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Radar"
anims/RESET = SubResource( 6 )
anims/Radar = SubResource( 7 )
